--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <h2>$500</h2>
           <a href="#" class="btn btn-dark">buy now <i class="fas fa-chevron-right"></i></a>
         </div>
-      </div>lg
+      </div>
       <div class="col-md-4 col-sm-6">
         <div class="product shadow">
           <img src="images/laptop/product-3.png" class="img-fluid">
